p2/confs/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-dep
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: html-storage
          mountPath: /usr/share/nginx/html/index.html
          subPath: index-app1.html
      volumes:
      - name: html-storage
        configMap:
          name: html-apps-config
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-dep
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: html-storage
          mountPath: /usr/share/nginx/html/index.html
          subPath: index-app2.html
      volumes:
      - name: html-storage
        configMap:
          name: html-apps-config
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector:
    app: app2
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-dep
spec:
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: html-storage
          mountPath: /usr/share/nginx/html/index.html
          subPath: index-app3.html
      volumes:
      - name: html-storage
        configMap:
          name: html-apps-config
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  selector:
    app: app3
  ports:
    - port: 80
